Fixes related to content overflow in modal dialogs (#250)

--- a/src/main/resources/assets/admin/common/styles/api/ui/dialog/modal-dialog.less
+++ b/src/main/resources/assets/admin/common/styles/api/ui/dialog/modal-dialog.less
@@ -20,6 +20,10 @@
   border: 1px solid @admin-dialog-border;
   box-sizing: border-box;
 
+  .form-view {
+    padding: 0px !important;
+  }
+
   .modal-dialog-wrapper {
     display: flex;
     flex-direction: column;
@@ -30,6 +34,7 @@
   .modal-dialog-header {
     .clearfix();
     padding: 30px;
+    box-sizing: border-box;
 
     h2 {
       line-height: 32px; //92px total height
@@ -49,10 +54,11 @@
   }
 
   .modal-dialog-body {
-    padding: 0 30px;
+    padding: 15px 30px;
     flex: 1;
-    max-height: calc(~'100% - ' 164px);
     overflow: auto;
+    box-sizing: border-box;
+    max-height: 50vh;
   }
 
   .modal-dialog-footer {
@@ -230,34 +236,42 @@
   display: none;
 }
 
-body {
-  &._0-240, &._240-360, &._360-540, &._540-720 {
-    .cancel-button-top {
+.cancel-button-inline() {
+  .cancel-button-top {
 
-      top: 0;
-      right: 0;
-      width: 26px;
-      height: 26px;
-      line-height: 26px;
-      background-color: white;
-      z-index: 1;
+    top: 0;
+    right: 0;
+    width: 26px;
+    height: 26px;
+    line-height: 26px;
+    background-color: white;
+    z-index: 1;
 
+    &:before, &:after {
+      background-color: @admin-font-gray2;
+      margin: 0;
+      top: 16px;
+      left: 0;
+      height: 3px;
+      width: 15px;
+    }
+
+    &:hover {
+      background-color: @admin-white;
       &:before, &:after {
         background-color: @admin-font-gray2;
-        margin: 0;
-        top: 16px;
-        left: 0;
-        height: 3px;
-        width: 15px;
-      }
-
-      &:hover {
-        background-color: @admin-white;
-        &:before, &:after {
-          background-color: @admin-font-gray2;
-        }
       }
     }
+  }
+
+  .grey-header .cancel-button-top {
+    background-color: @admin-bg-light-gray;
+  }
+}
+
+body {
+  &._0-240, &._240-360, &._360-540, &._540-720 {
+    .cancel-button-inline();
   }
 
   &._0-240 .@{_COMMON_PREFIX}modal-dialog, &._240-360 .@{_COMMON_PREFIX}modal-dialog {
@@ -292,14 +306,15 @@ body {
 
   @media screen and (max-height: 720px) {
     .@{_COMMON_PREFIX}modal-dialog {
-      height: 80%;
-    }
-  }
-  @media screen and (min-height: 721px) {
-    .@{_COMMON_PREFIX}modal-dialog .modal-dialog-wrapper {
-      height: auto;
-      max-height: 660px;
-    }
-  }
+      .cancel-button-inline();
 
+      .modal-dialog-header {
+        padding: 15px 30px;
+      }
+
+      .modal-dialog-body {
+        max-height: 65vh;
+      }
+    }
+  }
 }
