--- a/src/main/resources/assets/admin/common/styles/apps/content/publish/issue-details-dialog.less
+++ b/src/main/resources/assets/admin/common/styles/apps/content/publish/issue-details-dialog.less
@@ -4,6 +4,7 @@
   .dialog-content {
     padding: 5px 0;
     overflow-y: auto;
+    min-height: 200px;
 
     .deck-panel {
       overflow: visible;
