--- a/src/main/resources/assets/admin/common/styles/apps/content/wizard/edit-permissions-dialog.less
+++ b/src/main/resources/assets/admin/common/styles/apps/content/wizard/edit-permissions-dialog.less
@@ -25,7 +25,7 @@
 
   .overwrite-child-check {
     position: absolute;
-    bottom: 40px;
+    bottom: 27px;
     z-index: 1;
     &.checkbox label {
       color: @admin-blue !important;
